feat(page 2 html, css)added carousel with images

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
                 <a class="nav-link active" aria-current="page" href="#">Part 01</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Part 02</a>
+                <a class="nav-link" href="/part2.html">Part 02</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
 
-      <h2 class="edc">EDC Las Vegas</h2>
+      <h2 class="edc">Welcome to EDC Las Vegas</h2>
 
       <div id="carouselExampleFade" class="carousel slide carousel-fade carouselp1" data-bs-ride="carousel">
         <div class="carousel-inner">
